--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
               <a href="#projects" class="btn btn-primary">Explore Now</a>
 
-              <a href="#" class="btn btn-outline">Contact Us</a>
+              <a href="https://wa.me/2348108471471?text=I'm+from+CentrixssIThub+website" class="btn btn-outline">Contact Us</a>
 
             </div>
 
